# D02pipipipi_binning_scheme

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  MinimalExample.cpp
include/: BinningBase.h  CachedVar.h  HistogramBase.h  HyperBinning.h  HyperBinningMemRes.h  HyperCuboid.h  HyperHistogram.h  HyperPoint.h  HyperVolume.h  Utilities.h
src/: BinningBase.cpp  CMakeLists.txt  HistogramBase.cpp  HyperBinning.cpp  HyperBinningMemRes.cpp  HyperCuboid.cpp  HyperHistogram.cpp  HyperPoint.cpp  HyperVolume.cpp  Utilities.cpp
